--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <img id="banner-image-file-info" src="./resources/images/information-main.jpg" alt="Information Image">
       <h1>It doesn't hurt to keep practicing</h1>
       <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h3>
+      <div class="quote">Emanuel, Sr Strategist at Hiring.com</div>
     </div>
     <div class="practice-info-container">
       <div class="practice-info">
@@ -76,6 +77,54 @@
         <span>Join a keynote with Oliver Sack about music in medical treatment</span>
         <a href="#">Read more</a>
       </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Start Learning Section -->
+
+  <div class="start-learning-container">
+    <div class="heading">
+      <h1>Start learning</h1>
+    </div>
+    <div class="courses-container">
+      <div class="individual-course-container">
+        <img class="course-image" src="./resources/images/course-software.jpg" alt="Software Engineering">
+          <h2>Software Engineering</h2>
+          <span class="courses">Courses</span>
+          <span class="course-info">Web Development, Mobile Development, iOT, APIs</span>
+      </div>
+      <div class="individual-course-container">
+        <img class="course-image" src="./resources/images/course-computer-art.jpg" alt="Computer Art">
+        <h2>Computer Art</h2>
+        <span class="courses">Courses</span>
+        <span class="course-info">Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</span>
+      </div>
+      <div class="individual-course-container">
+        <img class="course-image" src="./resources/images/course-design.jpg" alt="Design">
+        <h2>Design</h2>
+        <span class="courses">Courses</span>
+        <span class="course-info">User Experience Design, User Research, Visual Design</span>
+      </div>
+      <div class="individual-course-container">
+        <img class="course-image" src="./resources/images/course-data.jpg" alt="Data">
+        <h2>Data</h2>
+        <span class="courses">Courses</span>
+        <span class="course-info">Data Science, Big Data, SQL, Data Visualization</span>
+      </div>
+      <div class="individual-course-container">
+        <img class="course-image" src="./resources/images/course-business.jpg" alt="Business">
+        <h2>Business</h2>
+        <span class="courses">Courses</span>
+        <span class="course-info">Product Development, Business Development, Startup</span>
+      </div>
+      <div class="individual-course-container">
+        <img class="course-image" src="./resources/images/course-marketing.jpg" alt="Marketing">
+        <h2>Marketing</h2>
+        <span class="courses">Courses</span>
+        <span class="course-info">Analytics, Content Marketing, Mobile Marketing</span>
+      </div>
+
       </div>
     </div>
   </div>
