Add Thesis section

--- a/index.html
+++ b/index.html
@@ -127,7 +127,40 @@
 
       </div>
     </div>
-  </div>
 
+<!-- Thesis Exhibit Section -->
+
+  <div class="heading">
+    <h1>Thesis exhibit</h1>
+  </div>
+  <div class="thesis-exhibit-container">
+<div class="thesis-info-container">
+  <div class="thesis-video-container">
+    <video src="./resources/videos/thesis.mp4" autoplay poster="posterimage.jpg">
+      Thesis exhibit Colmar Academy
+    </video>
+</div>
+  </div>
+  <div class="thesis-classes-container">
+<div class="practice-info">
+  <div class="thesis-image-container">
+  <img src="./resources/images/thesis-fisma.jpg" alt="Thesis Fisma">
+  </div>
+  <div class="practice-info-text">
+  <h2>Fisma: Design and Prototype</h2>
+  <span>Designer showcase of new prototype product</span>
+  </div>
+</div>
+<div class="practice-info">
+    <div class="thesis-image-container">
+  <img src="./resources/images/thesis-now-and-then.jpg" alt="Thesis Now and Then">
+</div>
+  <div class="practice-info-text">
+  <h2>Now and then</h2>
+  <span>Research study about New York</span>
+</div>
+</div>
+</div>
+</div>
   </body>
 </html>
