--- a/index.html
+++ b/index.html
@@ -140,8 +140,10 @@
       Thesis exhibit Colmar Academy
     </video>
 </div>
+<h2>Reimagine urban</h2>
+"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
   </div>
-  <div class="thesis-classes-container">
+  <div class="thesis-classes-container"></span>
 <div class="practice-info">
   <div class="thesis-image-container">
   <img src="./resources/images/thesis-fisma.jpg" alt="Thesis Fisma">
@@ -162,5 +164,22 @@
 </div>
 </div>
 </div>
+
+<!-- Footer -->
+<footer>
+<div class="copyright">
+  © 2016 Colmar Academy. All rights reserved.
+</div>
+<div class="terms-privacy">
+  <nav>
+    <ul>
+      <li><a href="#">Terms</a></li>
+      <li><a href="#">Privacy</a></li>
+    </ul>
+  </nav>
+</div>
+</footer>
+
+
   </body>
 </html>
