--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
+    <link href="./resources/fonts/fonts.css" rel="stylesheet" type="text/css">
     <link type="text/css" rel="stylesheet" href="./resources/css/reset.css">
     <link type="text/css" rel="stylesheet" href="./resources/css/style.css">
     <meta charset="utf-8">
@@ -24,6 +26,16 @@
           <li>Sign in</li>
         </ul>
       </nav>
+        <div class="mobile-menu">
+  <ul>
+        <li><img src="file:///C:/Users/jule/colmar/resources/images/ic-logo.svg" alt="Colmar Logo"></li>  
+            <li><i class="fa fa-pencil fa-lg"></i></li>
+            <li><i class="fa fa-desktop fa-lg"></i></li>
+            <li><i class="fa fa-user fa-lg"></i></li>
+          </ul>
+
+        </div>
+
     </header>
 
 <!-- Banner -->
@@ -32,8 +44,8 @@
     <div class="banner-image">
       <img id="banner-image-file" src="./resources/images/banner.jpg" alt="Banner Colmar Academy"></div>
     <div id="banner-info">
-    <h1>Learn something new every day</h1>
-    <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+    <h1 id="banner-heading">Learn something new every day</h1>
+    <h3 id="banner-h3">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
     <div class="button">Start Here</div>
   </div>
   </div>
@@ -136,12 +148,12 @@
   <div class="thesis-exhibit-container">
 <div class="thesis-info-container">
   <div class="thesis-video-container">
-    <video src="./resources/videos/thesis.mp4" autoplay poster="posterimage.jpg">
-      Thesis exhibit Colmar Academy
+    <video controls src="./resources/videos/thesis.mp4" autoplay poster="posterimage.jpg">
+      Your browser does not support the video tag.
     </video>
 </div>
 <h2>Reimagine urban</h2>
-"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+<h3>"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</h3>
   </div>
   <div class="thesis-classes-container"></span>
 <div class="practice-info">
@@ -173,8 +185,11 @@
 <div class="terms-privacy">
   <nav>
     <ul>
-      <li><a href="#">Terms</a></li>
-      <li><a href="#">Privacy</a></li>
+      <li>Terms</li>
+      <li>Privacy</li>
+      <li> <i class="fa fa-facebook"></i></li>
+      <li> <i class="fa fa-twitter"></i></li>
+      <li> <i class="fa fa-pinterest"></i></li>
     </ul>
   </nav>
 </div>
